# talos

./: .dockerignore  .env.example  .gitignore  Dockerfile  FILE_UPLOAD_SYSTEM_GUIDE.md  GUIDE.md  PHASE4_PLAN.md  PHASE5_PLAN.md  QUICKSTART.md  README.md  app.py  docker-compose.yaml  file_system_presentation_script.md  modular_rag.py  my_contribution.txt  pyproject.toml  rag_cli.py  rag_cli_v2.py  requirements.txt
backend/: __init__.py  app.py  pyproject.toml  rag_cli.py
backend/api/: __init__.py
backend/api/routes/: __init__.py  auth.py  chatrooms.py  documents.py  messages.py  rag.py  workspaces.py
backend/api/schemas/: __init__.py  auth.py  chatroom.py  document.py  message.py  rag.py  workspace.py
backend/config/: __init__.py
backend/model/: __init__.py  identity.py  messaging.py
backend/rag/: modular_rag.py
backend/rag/orchestration/: __init__.py
backend/rag/retriever/: hybrid_retriever.py
backend/services/: __init__.py  rag_service.py
config/: config.example.yaml  config.test.yaml  config.yaml  local_embeddings_config.yaml  rag_config.yaml  rag_config_new.yaml
config/prompts/: hyde_prompt.yaml  qa_prompt.yaml  query_rewrite_prompt.yaml
data/uploads/: knowledge_base.txt
docs/: CHECKLIST.md  Chat Search Implementation (Updated Branch).md  IMPLEMENTATION_SUMMARY.md  TODO™.md  Workspace_Channel_API.md  chat-memory-handoff.md
docs/Requirements & Design/: API Directory.md  Extensions.md  Requirements.md  Technologies.md
docs/audits/: 2026-07-02-deep-audit-findings.md  2026-07-02-rag-retrieval-quality-findings.md
docs/figures/: README.md  future_image_search.typ  future_scaled_ai_serving.typ  gen_message_figures.py  gen_more_figures.py  message_delivery_fanout.typ  message_orm_layout.typ  prosemirror_node_hierarchy.typ  search_jsonb_vs_ilike.typ  search_two_query_lifecycle.typ  thread_recursive_cte.typ
docs/mastery/: 00-foundations.md  01-mental-model.md  02-rag-core-walkthrough.md  03-config-and-settings-walkthrough.md  04-background-pipelines-walkthrough.md  05-tests-and-eval-walkthrough.md  06-libraries-as-used.md  07-integration-map.md  08-change-playbook.md  09-working-with-llms.md  10-viva-qa.md  README.md
docs/rag-manual/: gen_diagrams.py  rag_owners_manual.typ
evaluation/: EVALUATION_PLAN.md  EVAL_REPORT.md  eval_utils.py  presentation.tex  rag_evaluation.ipynb  rag_evaluation_talos.ipynb  refs.bib
evaluation/live_pdf_eval/: .gitignore  REPORT.md  common.py  gen_questions.py  questions.json  run_ablation.py
examples/: advanced_retrieval.py  basic_qa.py  document_ingestion.py
frontend/: .env.example  TESTING.md  index.html  package-lock.json  package.json  vite.config.js
frontend/public/: sw.js
frontend/src/: App.jsx  main.jsx
modules/app/: auth.py  notification_service.py  notification_worker.py  notifications.py  preferences.py  preferences_service.py  websocket.py
modules/config/: config_loader.py
modules/evaluator/: __init__.py
modules/generator/: __init__.py  llm_generator.py
modules/memory/: conversation_memory.py
modules/model/: base.py  identity.py  messaging.py  notifications.py  preferences.py
modules/orchestration/: query_router.py
modules/pre_retrieval/: __init__.py  query_processor.py
modules/queue/: rabbitmq.py
modules/rag/: modular_rag.py
modules/reranker/: __init__.py  cross_encoder_reranker.py
modules/retriever/: __init__.py
modules/websocket/: manager.py
nginx/: nginx.conf
scripts/: check_streaming.py  clear_user_data.py  clear_user_data.sql  debug_ask.py  reingest_workspace_files.py  seed_bot.py  test_upload.py
src/: README.md  __init__.py  broker.py  database.py  scheduler.py
src/ai/: __init__.py  model.py  router.py
src/auth/: __init__.py  avatars.py  core.py  dependencies.py  model.py  oauth.py  password.py  router.py  totp.py  webauthn.py
src/backend/: router.py  workspace.py
src/chat/: __init__.py  ai.py  attachments.py  model.py  realtime.py  router.py  schema.py  search.py  service.py  storage.py  sync.py
src/config/: __init__.py  config.py  config_.py  prompts.py  rag_config.example.yaml  runtime_rag.py
src/core/: __init__.py  base_interfaces.py  config_loader.py  exceptions.py
src/data/: ai_runtime.json
src/files/: constants.py  dependencies.py  exceptions.py  model.py  models.py  router.py  schemas.py  service.py  service__.py  storage.py  streaming.py
src/filesystem/: documents.py  errors.py  gdrive.py  model.py  router.py  service.py  tasks.py
src/generation/: __init__.py  citation_handler.py  llm_service.py  prompt_builder.py  response_parser.py
src/indexing/: __init__.py  embedding_service.py  index_builder.py  milvus_manager.py  milvus_vector_store.py  sparse_encoder.py
src/ingestion/: __init__.py  chunking_strategies.py  document_loaders.py  metadata_extractors.py  pipeline.py
src/integrations/: agent.py  mcp_server.py  talos_tools.py  tools.py
src/model/: __init__.py  base.py  cookie.py  identity.py  messaging.py  utils.py  websocket.py
src/notifications/: __init__.py  model.py  notification_service.py  notification_worker.py  preferences_service.py  router.py  service.py  tasks.py
src/orchestration/: __init__.py  conversation_memory.py  query_router.py  rag_pipeline.py
src/permissions/: model.py  router.py  service.py
src/processing/: chat_indexing.py  chat_tasks.py  documents.py  images.py  inline.py  tasks.py  worker.py
src/rag/: __init__.py  access.py  ai_settings.py  citations.py  generation.py  ingestion.py  message_text.py  rag_chain.py  router.py  settings_router.py  trace.py  vector_store.py
src/retrieval/: __init__.py
src/utils/: __init__.py  async_helpers.py  cache_manager.py  datetime.py  email.py  email_templates.py  exceptions.py  img.py  import_sa_models.py  logger.py  openapi_doc_decorator.py  optional_dep.py  ratelimit.py
src/websocket/: manager.py
src/workspace/: __init__.py  channel_members.py  channels.py  discovery.py  dms.py  model.py  router.py  service.py  settings.py  utils.py  workspace_members.py
src_v2/config/: prompts.py  (+1 more)
templates/: index.html
tests/: conftest.py  test_ingestion.py
(+296 files in other folders)
