[project]
name = "graduation-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
# spacy (via unstructured) has no cp314 wheels yet — use 3.13 until upstream adds support
requires-python = ">=3.13, <3.14"
dependencies = [
    "bcrypt>=5.0.0",
    "pyotp>=2.9.0",
    "fastapi[all]>=0.136.1",
    "jinja2>=3.1.6",
    "langchain>=1.2.17",
    "langchain-openai>=1.1.14",
    "langchain-milvus>=0.2.0",
    "langchain-unstructured>=0.1.0",
    "unstructured[pdf]>=0.22.27",
    "langchain-community>=0.3.0",
    "langchain-huggingface>=1.2.2",
    "langchain-classic>=1.0.6",
    "pymilvus>=2.6.12",
    "numpy>=2.4.4",
    "openai>=2.34.0",
    "psycopg2-binary>=2.9.12",
    "python-multipart>=0.0.27",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.4.1",
    "sqlalchemy>=2.0.49",
    "starlette>=1.0.0",
    "uvicorn>=0.46.0",
    "webauthn>=2.7.1",
    "authlib>=1.7.2",
    "qrcode[pil]>=8.2",
    "joserfc>=1.6.5",
    "black>=26.3.1",
    "limits>=5.8.0",
    "cachetools>=7.1.0",
    "bidict>=0.23.1",
    "minio>=7.2.20",
    "arq>=0.28.0",
    "pillow>=12.2.0",
    "langchain-text-splitters>=1.1.1",
    "python-magic>=0.4.27",
    # Ships bundled libmagic.dll for Windows — python-magic's Linux-style
    # packaging otherwise fails with "failed to find libmagic".
    "python-magic-bin>=0.4.14 ; sys_platform == 'win32'",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.4.1",
    "torch>=2.11.0",
    "pydantic>=2.12.5",
    "pypdf>=6.9.2",
    "pymupdf>=1.27.2.3",
    "pika>=1.4.0",
    "taskiq>=0.12.4",
    "taskiq-redis>=1.0.9",
    "pywebpush>=2.3.0",
]

[dependency-groups]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "faker>=40.8.0",
]
dev = [
    "alembic>=1.18.4",
    "basedpyright>=1.39.3",
    "types-authlib>=1.6.11.20260418",
]
eval = [
    "jupyter>=1.1.1",
    "jupyterlab>=4.0",
    "notebook>=7.0",
    "ipykernel>=6.29",
    "ipython>=8.20",
    "nbconvert>=7.16",
    "nbformat>=5.10",
    "jupyter-client>=8.6",
    "jupyter-server>=2.14",
    "comm>=0.2",
    "datasets>=3.0",
    "scipy>=1.13",
    "pandas>=2.2",
    "matplotlib>=3.8",
]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
asyncio_mode = "auto"

[tool.pyright]
extraPaths = ["src", "."]