[project]
name = "graduation-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt>=5.0.0",
    "pyotp>=2.9.0",
    "fastapi[all]>=0.136.3",
    "jinja2>=3.1.6",
    "langchain>=1.3.2",
    "langchain-openai>=1.2.2",
    "langchain-milvus>=0.3.3",
    "langchain-unstructured>=1.0.1",
    "unstructured[pdf]>=0.22.31",
    "langchain-community>=0.4.2",
    "langchain-huggingface>=1.2.2",
    "langchain-classic>=1.0.6",
    "pymilvus>=2.6.12",
    "numpy>=2.4.6",
    "openai>=2.40.0",
    "python-multipart>=0.0.30",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.5.1",
    "sqlalchemy[asyncio]>=2.1.0b2",
    "starlette>=1.2.1",
    "uvicorn>=0.48.0",
    "webauthn>=2.7.1",
    "authlib>=1.7.2",
    "qrcode[pil]>=8.2",
    "joserfc>=1.7.0",
    "limits>=5.8.0",
    "cachetools>=7.1.4",
    "bidict>=0.23.1",
    "minio>=7.2.20",
    "pillow>=12.2.0",
    "langchain-text-splitters>=1.1.1",
    "python-magic>=0.4.27",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.4.1",
    "torch>=2.11.0",
    "pydantic>=2.13.4",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.1",
    "taskiq>=0.12.4",
    "taskiq-redis>=1.0.9",
    "pywebpush>=2.3.0",
    "python-socketio>=5.16.2",
]

[dependency-groups]
dev = [
    "alembic>=1.18.4",
    "black>=26.5.1",
    "basedpyright>=1.39.6",
    "types-authlib>=1.6.11.20260418",
]
test = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-mock>=3.14.0",
    "faker>=40.20.0",
    "pytest-env>=1.6.0",
]
eval = [
    "jupyter>=1.1.1",
    "jupyterlab>=4.0",
    "notebook>=7.0",
    "ipykernel>=6.29",
    "ipython>=8.20",
    "nbconvert>=7.16",
    "nbformat>=5.10",
    "jupyter-client>=8.6",
    "jupyter-server>=2.14",
    "comm>=0.2",
    "datasets>=3.0",
    "scipy>=1.13",
    "pandas>=2.2",
    "matplotlib>=3.8",
]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
asyncio_mode = "auto"
env = [
    "IS_TEST=True",
]

[tool.pyright]
extraPaths = ["src", "."]
